# BATTLEGROUND-EDITOR

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  readme.md
.github/: pull_request_template.md
.github/workflows/: basic-checks.yml
backend/: pyproject.toml
backend/data/processed/: all.json  anomalies.json  heroes.json  keywords.json  minions.json  process_stats.txt  quests.json  rewards.json  spells.json  timewarp.json  trinkets.json
backend/data/raw/hearthstonejson/latest/: meta.json
backend/data_process/: run_pipeline.py
backend/data_process/exporters/: frontend.py
backend/data_process/schemas/: processed.py
backend/data_process/sources/: crawl_blizzard_bg.py  download_card_assets.py  sync_raw_hearthstonejson.py
backend/data_process/transforms/: process_hearthstonejson.py
backend/data_process/utils/: io.py  paths.py
backend/data_process/validators/: processed.py
backend/scripts/: download_card_assets.py  process_hearthstonejson.py  sync_raw_hearthstonejson.py
backend/tests/data_process/: test_crawl_blizzard_bg.py  test_pipeline_structure.py
frontend/: package-lock.json  package.json
