[project]
name = "battleground-editor-backend"
version = "0.1.0"
description = "Data processing scripts for the Battleground editor."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
  "pre-commit>=4.0.0",
  "pytest>=8.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
